--- a/tattoo-site/composer.json
+++ b/tattoo-site/composer.json
@@ -11,8 +11,11 @@
         "php": "^7.1.3",
         "caouecs/laravel-lang": "~4.0",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^6.5",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/socialite": "^4.3",
+        "laravel/tinker": "^1.0",
+        "socialiteproviders/instagram": "^3.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
